@@ -1,0 +1,3 @@
+ALTER TABLE score ADD COLUMN `STAGE` VARCHAR(255) NULL  AFTER `ALL_CLEAR` ;
+ALTER TABLE game DROP COLUMN `RULES` ;
+
