@@ -38,6 +38,15 @@
             <h3>${level.label}</h3>
 
             <table style="min-width: 50%;text-align: right">
+                <tr>
+                    <td>Rank</td>
+                    <td>Player</td>
+                    <td>Score</td>
+                    <td>All clear</td>
+                    <td>Stage</td>
+                    <td>Date</td>
+                </tr>
+                
                 <c:forEach id="scoreTable" var="score" items="#{level.scoreItems}">
                     <tr>
                         <td style="text-align:right">
@@ -60,9 +69,7 @@
                             </c:if>
                         </td>
                         <td>
-                            <p class="message_column">
-                                <h:outputText value="${score.message}" title="${score.longMessage}" />
-                            </p>
+                            <h:outputText value="${score.stage}" />
                         </td>
                         <td>
                             <h:outputText value="${score.date}" converter="dateMMDDYYConverter" styleClass="date" />
