@@ -1,5 +1,6 @@
 1.3.3
 - feature: add link to NGF
+- feature: add stage value to scores
 
 1.3.2
 - feature: add all clearer title
